[package]
name = "travis-migrate"
version = "1.0.0"
authors = ["Pietro Albini <pietro@pietroalbini.org>"]
edition = "2018"

[dependencies]
env_logger = "0.6.0"
failure = "0.1.3"
hyper-old-types = "0.11.0"
log = "0.4.6"
reqwest = "0.9.5"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.34"
structopt = "0.2.14"
